--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
 
-  <style>
+  <!-- <style>
     #sample {
       background-color: red;
       width: 300px;
       height: 300px;
     }
-  </style>
+  </style> -->
 
 </head>
-<h1>HELLO!!!!!!!</h1>
+
 
 <body>
-
-  <h1>Personal Time</h1>
-  <div id="sample"></div>
-  <script src="mySketch.js"></script>
+<!-- <h1>hello</h1> -->
+  <!-- <h1>Personal Time</h1> -->
+  <!-- <div id="sample"></div> -->
+  <!-- <div></div> -->
+  <script id="sample" src="mySketch.js"></script>
 </body>
 
 </html>
